[gd_scene load_steps=5 format=3 uid="uid://76yybijhju3m"]

[ext_resource type="Script" path="res://image_thumbnail_root.gd" id="1_eco1h"]
[ext_resource type="Texture2D" uid="uid://clq14j8jjbcyn" path="res://sony.ARW" id="2_aytdj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ri2lo"]

[sub_resource type="Theme" id="Theme_q6bub"]

[node name="Control" type="ColorRect"]
material = SubResource("CanvasItemMaterial_ri2lo")
custom_minimum_size = Vector2(360, 240)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1560.0
offset_bottom = -840.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q6bub")
color = Color(0.0745098, 0.0745098, 0.0745098, 0.513726)
script = ExtResource("1_eco1h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="imgTextureRect" type="TextureRect" parent="MarginContainer/ColorRect/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 180)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_aytdj")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="ImageNameLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 20
text = "Icon.svg"
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="sizeLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "6000x4000"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
